--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/ui.css">
+
+  </head>
 
   <body>
 
