Created a basic gui, TODO: Color Schemes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
   </head>
 
   <body>
+    <div id="board">
+        <!--Module Area-->
+        <div id="modules">
+          <input type="text" id="search-box"><br><br>
 
+        </div>
+        <!--Main Editor-->
+        <div id="editor" contenteditable="true">
+          Hello World!
+        </div>
+    </div>
+
+    <!--JS-->
+    <script src="js/main.js"></script>
   </body>
 </html>
