Added a bottom menu bar to display font customization and other options (No functionality yet)

--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
 
   </head>
 
-  <body>
+  <body style="-webkit-app-region: drag">
     <div id="board">
         <!--Module Area-->
         <div id="modules">
-          <input type="text" id="search-box"><br><br>
+          <input type="text" id="search-box" placeholder="Search...">
+          <br><br>
 
         </div>
         <!--Main Editor-->
+
+
         <div id="editor" contenteditable="true">
           Hello World!
         </div>
-    </div>
 
+    </div>
+    <div id="actionbar"></div>
     <!--JS-->
     <script src="js/main.js"></script>
   </body>
