New card based box layout. Lighter in theme. Added a Box object for other custom modules to inherit from.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <!--Module Area-->
         <div id="modules">
           <input type="text" id="search-box" placeholder="Search...">
-          <br><br>
+          <br>
+          <div id="stage"></div>
 
         </div>
         <!--Main Editor-->
@@ -22,8 +23,13 @@
         </div>
 
     </div>
-    <div id="actionbar"></div>
+    <div id="actionbar">
+      <span id="font-family-select">Default font</span>
+      <span id="font-size-select">15 px </span>
+      <span id="word-count-display">123 words</span>
+    </div>
     <!--JS-->
+    <script src="js/jquery-2.1.0.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
