Basic NLP functionality, fires nouns on every sentence complete to the google search and definition module (17s) for demonstration.

--- a/index.html
+++ b/index.html
@@ -10,26 +10,25 @@
     <div id="board">
         <!--Module Area-->
         <div id="modules">
+
           <input type="text" id="search-box" placeholder="Search...">
-          <br>
+
           <div id="stage"></div>
 
         </div>
         <!--Main Editor-->
-
-
-        <div id="editor" contenteditable="true">
-          Hello World!
-        </div>
-
+        <div id="editor"> </div>
     </div>
-    <div id="actionbar">
-      <span id="font-family-select">Default font</span>
-      <span id="font-size-select">15 px </span>
-      <span id="word-count-display">123 words</span>
-    </div>
+
+    <!-- <div id="actionbar"> -->
+    <!--   <span id="font-family-select">Roboto</span> -->
+    <!--   <span id="font-size-select"></span> -->
+    <!--   <span id="word-count-display"></span> -->
+    <!-- </div> -->
     <!--JS-->
     <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/tinymce/tinymce.min.js"></script>
     <script src="js/main.js"></script>
+
   </body>
 </html>
